# hyper-realistic-game-engine

./: .clang-format  .clang-tidy  .gitignore  .markdownlint-cli2.jsonc  .shellcheckrc  .yamllint.yml  Makefile
.cursor/rules/: 00-core-governance-cpp.mdc  01-clarification-first.mdc  05-build-toolchain-gates.mdc  06-dependency-governance.mdc  10-cpp-safety-subset.mdc  12-program-roadmap-governance.mdc  15-test-discipline.mdc  20-performance-critical-design.mdc  25-gpu-and-shader-governance.mdc  30-failsafe-error-logging-contract.mdc  35-api-abi-versioning-contract.mdc  40-determinism-envelope-and-replay.mdc  45-serialization-compatibility-integrity.mdc  50-baseline-and-promotion-policy.mdc  55-operational-resilience-and-backups.mdc  60-waiver-and-risk-control.mdc  65-dual-objective-and-escalation.mdc  70-validation-matrix-enforcement.mdc  75-annual-benchmark-ladder.mdc  80-cross-subsystem-invariants.mdc  90-migration-and-deprecation-safety.mdc
.github/PULL_REQUEST_TEMPLATE/: baseline-promotion.md  bugfix.md  feature.md  governance-docs.md
.github/rulesets/: main-protected-trunk.json
.github/scripts/: agent-submit.sh  configure-main-branch-protection.sh  emit-agent-pr-split-plan.sh  generate-cycle-evidence-bundle.py  generate-lpg-trend-report.py  generate-proof-artifacts.sh  install-lint-toolchain.sh  produce-runtime-benchmark-artifact.sh  resolve-applicable-rules.sh  review-lpg-artifacts.py  run-clarification-validation-matrix.sh  run-lint-suite.py  run-lint-suite.sh  run-performance-lane.py  (+16 more)
runtime/: CMakeLists.txt
runtime/benchmark/: main.cpp
(+59 files in other folders)
